--- a/sprint3/app/globals.css
+++ b/sprint3/app/globals.css
@@ -1,3 +1,46 @@
+/* Estilos para el cuerpo del documento */
+body {
+  margin-left: 250px; /* Ancho del menú lateral */
+  padding: 20px; /* Espaciado interior para el contenido principal */
+  width: calc(100% - 250px); /* Ancho del contenido principal (restante) */
+  transition: margin-left 0.3s;
+}
+
+/* Estilos para el menú lateral */
+.menu {
+  width: 250px; /* Ancho del menú lateral */
+  background-color: #FFD700; /* Color de fondo */
+  height: 100%; /* Ocupa toda la altura */
+  position: fixed; /* Fijar en la posición */
+  top: 0; /* En la parte superior */
+  left: 0; /* En el borde izquierdo */
+  padding-top: 20px; /* Espacio superior */
+}
+
+.menuL {
+  list-style-type: none; /* Quitar viñetas de la lista */
+  padding: 0;
+}
+
+.menuLi {
+  margin-bottom: 10px;
+}
+
+/* Estilos para los enlaces del menú */
+.menu a {
+  display: block; /* Hacer que los enlaces ocupen todo el ancho del menú */
+  padding: 10px 20px; /* Espaciado interno */
+  color: #050505; /* Color del texto */
+  text-decoration: none; /* Quitar subrayado de los enlaces */
+  transition: background-color 0.3s; /* Transición de color de fondo */
+}
+
+.menu a:hover {
+  background-color: #555; /* Cambiar el color de fondo al pasar el mouse */
+  
+}
+
+
 
 
 :root {
@@ -6,21 +49,13 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+/* Estilos para la clase .home */
+.home {
+  display: flex;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* Estilos para la clase .content */
+.content {
+  flex-grow: 1;
+  padding: 20px;
 }
-
